# Noah.Genesis

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  EXISTING_MODELS_STRATEGY.md  FIRESTORE_INDEXING_CONSIDERATIONS.md  HIPAA_MVP_Checklist.md  Makefile  README.md  SECURITY_AND_COMPLIANCE_PLAN.md  firestore.rules  noah_workspace_rules.json  planning.md  pyproject.toml  tasks.md
backend/: DEPLOYMENT.md  Dockerfile  README.md  cloudbuild.yaml
backend/app/: __init__.py  main.py
backend/app/agent/: README.md  __init__.py  constants.py  graph.py  memory.py  prompts.md  state.py  tool_definitions.py  tools.md  tools.py
backend/app/agents/: hippocrates_agent.py
backend/app/api/: README.md
backend/app/config/: __init__.py  event_schemas.json  mock_clinical_kb.json
backend/app/core/: __init__.py  config.py  exceptions.py  security.py
backend/app/models/: README.md  __init__.py  api_models.py  firestore_models.py
backend/app/services/: README.md  __init__.py  (+10 more)
backend/tests/: README.md
frontend/: .eslintrc.cjs  .prettierrc.json  DEPLOYMENT.MD  README.md  cloudbuild.yaml  firebase.json
frontend/src/: App.tsx  main.tsx
mock_data/fhir_server/: mock_fhir_server.py  patient_1.json  patient_2.json
noah_agent_orchestration_groundwork/: README.md  agent_interfaces.py  conceptual_workflows.py  langgraph_concepts.md
noah_agent_orchestration_groundwork/tests/: test_agent_orchestration_workflows.py
noah_ai_report_structure_mvp/: README.md  report_data_generator.py  section_i_overview_ui.md  section_ii_identification_ui.md  section_iii_history_ui.md  section_v_systems_assessment_ui.md
noah_foundational_data_aggregation_mvp/: README.md  alloydb_schemas.sql  data_transformer.py  firestore_patient_profile_schema.json  manual_input_handler.py  pubsub_setup.md
noah_future_expansion_roadmap/: README.md  future_expansion_roadmap.md
noah_handoff_summary_mvp/: README.md  handoff_summary_generator.py  section_ix_handoff_summary_ui.md
noah_mvp_optimizations/: README.md  mvp_optimization_plan.md
noah_patient_summary_agent_mvp/: README.md  patient_summary_agent.py
noah_plan_of_care_todo_mvp/: README.md  section_vii_plan_of_care_ui.md  todo_list_manager.py
noah_shift_event_capture_agent_mvp/: README.md  shift_event_capture.py
noah_shift_events_log_display_mvp/: README.md  events_log_data_prep.py  section_vi_events_log_ui.md
scripts/: .gitkeep  git_initial_commit.sh  setup_dev_env.sh
scripts/rag_pipeline/: 01_process_and_embed_docs.py  README.md  __init__.py
terraform/: .gitkeep  README.md  monitoring_logging.md  monitoring_logging.tf  networking.md  networking.tf  outputs.tf  project_iam.md  project_iam.tf  secrets.md  secrets.tf  variables.tf  vector_search.tf
(+49 files in other folders)
